--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "19.2.0",
     "next": "16.0.1",
     "server-only": "^0.0.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
