--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.0.1",
     "server-only": "^0.0.1",
     "zustand": "^5.0.8",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
