--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "server-only": "^0.0.1",
     "zustand": "^5.0.8",
     "swr": "^2.2.5",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@prisma/client": "^7.0.1"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "prisma": "^7.0.0"
   }
 }
