--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "zustand": "^5.0.8",
     "swr": "^2.2.5",
     "zod": "^4.1.12",
-    "@prisma/client": "^6.2.1"
+    "@prisma/client": "^6.2.1",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
