--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "zod": "^4.1.12",
     "@prisma/client": "^6.2.1",
     "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.34.3"
+    "@upstash/redis": "^1.34.3",
+    "next-auth": "^5.0.0" 
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
